--- a/index.html
+++ b/index.html
@@ -14,7 +14,41 @@
 <body>
 <!-- HEADER -->
   <header class="site_header">
+    <section class="site-header">
+      <div class="container">
+        <div class="header">
+          <img src="img/Logo.svg" alt="Logo DeskPlus" width="131" height="55">
 
+                <!-- SITENAV -->
+                <nav class="sitenav">
+                  <ul class="sitenav__list">
+                    <li class="sitenav__list-item">
+                      <a class="sitenav__link" href="index.html">Home</a>
+                    </li>
+                    <li class="sitenav__list-item">
+                      <a class="sitenav__link" href="index.html">About</a>
+                    </li>
+
+                  </ul>
+              </nav>
+              <a href="contact.html" class="button">Contact</a>
+        </div>
+      </div>
+
+      <section>
+        <div class="container">
+          <div class="site-hero">
+            <h1 class="site-hero__heading">Good Living Better LIVE</h1>
+            <p class="site__hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam aliquam diam dictum mattis. </p>
+
+            <form action="#">
+              <input class="hero-form" type="text" placeholder="Enter product name">
+              <button class="hero-button button" type="button">Search</button>
+            </form>
+          </div>
+        </div>
+      </section>
+    </section>
   </header>
 
 <!-- MAIN -->
