--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 <nav class="sitenav">
                   <ul class="sitenav__list">
                     <li class="sitenav__list-item">
-                      <a class="sitenav__link" href="index.html">Home</a>
+                      <a class="sitenav__link" href="index.html">Showroom</a>
                     </li>
                     <li class="sitenav__list-item">
                       <a class="sitenav__link" href="index.html">About</a>
