Add opasity to hero

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <section class="site-header">
       <div class="container">
         <div class="header">
-          <img src="img/Logo.svg" alt="Logo DeskPlus" width="131" height="55">
+          <a class="logolink" href="index.html"><img src="img/Logo.svg" alt="Logo DeskPlus" width="131" height="55"></a>
 
                 <!-- SITENAV -->
                 <nav class="sitenav">
