--- a/index.html
+++ b/index.html
@@ -41,9 +41,10 @@
             <h1 class="site-hero__heading">Good Living Better LIVE</h1>
             <p class="site__hero-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Diam aliquam diam dictum mattis. </p>
 
-            <form action="#">
-              <input class="hero-form" type="text" placeholder="Enter product name">
-              <button class="hero-button button" type="button">Search</button>
+            <form action="https://echo.htmlacademy.ru">
+              <label class="visually-heddin">form</label>
+              <input class="hero-form" type="text" name="Search" placeholder="Enter product name">
+              <button class="hero-button button" type="submit">Search</button>
             </form>
           </div>
         </div>
