--- a/index.html
+++ b/index.html
@@ -20,6 +20,70 @@
 <!-- MAIN -->
   <main class="main">
 
+    <section class="kits">
+      <div class="kits__content container">
+        <h2 class="kits__heading">
+          Our Fave Kits
+        </h2>
+
+        <ul class="kits__list">
+
+          <li class="kits__item">
+            <span class="sale">Sale</span>  
+              <img  class="img__container-pics" src="./images/fave-kits.svg" srcset="./images/fave-kits.svg 1x, ./images/fave-kits@2x.svg 2x" alt="white chair" width="357" height="264">
+
+            <div class="kits__img-content">
+              <p class="kits__type">White Swan Chair</p>
+              <span class="kits__price">$69.99</span>
+            </div>
+          </li>
+
+          <li class="kits__item">
+            <span class="sale">Sale</span>  
+              <img  class="img__container-pics" src="./images/fave-kits2.svg" srcset="./images/fave-kits2.svg 1x, ./images/fave-kits2@2x.svg 2x" alt="white chair" width="357" height="264">
+
+            <div class="kits__img-content">
+              <p class="kits__type">White Swan Chair</p>
+              <span class="kits__price">$69.99</span>
+            </div>
+          </li>
+
+          <li class="kits__item">
+            <span class="sale">Sale</span>  
+              <img  class="img__container-pics" src="./images/fave-kits3.svg" srcset="./images/fave-kits3.svg 1x, ./images/fave-kits3@2x.svg 2x" alt="white chair" width="357" height="264">
+
+            <div class="kits__img-content">
+              <p class="kits__type">White Swan Chair</p>
+              <span class="kits__price">$69.99</span>
+            </div>
+          </li>
+
+
+        </ul>
+      </div>
+    </section>
+
+
+    <section class="furniture">
+
+      <div class="container">
+    <div class="flexed__furniture">
+      <div class="furniture__content">
+
+          <p class="furniture__moto">Simple & Modern</p>
+          <h2 class="furniture__heading">Furniture</h2>
+          <p class="furniture__desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium semper porta dui. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Pretium semper porta dui.</p>
+
+          <a class="order__link" href="#">Order now</a>
+        </div>
+
+        <img  class="img__container-pics" src="./images/second funiture.svg" srcset="./images/second funiture.svg, ./images/second funiture@2x.svg 2x" alt="woman" width="
+        487" height="359">
+
+      </div>
+      </div>
+    </section>
+
   </main>
 
 
