--- a/index.html
+++ b/index.html
@@ -313,7 +313,7 @@
             </address>
             <div class="social-link">
               <a href="#" target="_blank">
-                <img src="./img/   pinterest.svg" alt="social-links">
+                <img src="./img/pinterest.svg" alt="social-links">
               </a></div>
             </div>
           </div>
